<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <Button
        android:id="@+id/customer_btn"
        android:layout_width="@dimen/button_width"
        android:layout_height="153dp"
        android:onClick="onCustomerClick"
        android:text="@string/customer_button"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/supplier_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/supplier_btn"
        app:layout_constraintTop_toTopOf="@+id/supplier_btn" />

    <Button
        android:id="@+id/product_btn"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:onClick="onProductClick"
        android:text="@string/product_button"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toTopOf="@+id/supplier_btn"
        app:layout_constraintEnd_toStartOf="@+id/order_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <Button
        android:id="@+id/supplier_btn"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:onClick="onSupplierClick"
        android:text="@string/supplier_button"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/customer_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_btn" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/header_height" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/stocker"
        android:textColor="@color/colorAccent"
        android:textSize="52sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/footer_height" />

    <Button
        android:id="@+id/order_btn"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:onClick="onOrderClick"
        android:text="@string/order_button"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/product_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/product_btn"
        app:layout_constraintTop_toTopOf="@+id/product_btn" />

</android.support.constraint.ConstraintLayout>