...
        android:layout_marginBottom="8dp"
        android:background="@color/Delete"
        android:onClick="onDeleteObjectClick"
        android:text="@string/product_delete"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/saveObjectBtn"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/saveObjectBtn" />

    <Button
...
