...
    <TextView
        android:id="@+id/objectFailureMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_failure_msg"
        android:textSize="@dimen/msg_font_size"
        app:layout_constraintBottom_toTopOf="@+id/ObjectFailureHomeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline13" />

    <Button
...
